// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`menu > can navigate with arrow keys 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_21_"
      aria-describedby="menu-_r_21_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with active props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_30_"
      aria-describedby="menu-_r_30_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with borderless props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2t_"
      aria-describedby="menu-_r_2t_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2k_"
      aria-describedby="menu-_r_2k_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with disabled props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2q_"
      aria-describedby="menu-_r_2q_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with sentiment danger 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2n_"
      aria-describedby="menu-_r_2n_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > placement > renders bottom 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2b_"
      aria-describedby="menu-_r_2b_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > placement > renders left 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2e_"
      aria-describedby="menu-_r_2e_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > placement > renders right 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2h_"
      aria-describedby="menu-_r_2h_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > placement > renders top 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_28_"
      aria-describedby="menu-_r_28_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders nested 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_1n_"
      aria-describedby="menu-_r_1n_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.Group 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_7_"
      aria-describedby="menu-_r_7_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.Group and labelDescription 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_b_"
      aria-describedby="menu-_r_b_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.Item 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_4_"
      aria-describedby="menu-_r_4_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.ItemLink & Menu.Item disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_l_"
      aria-describedby="menu-_r_l_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.ItemLink 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_f_"
      aria-describedby="menu-_r_f_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with disclosure not a function 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_0_"
      aria-describedby="menu-_r_0_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with footer 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_1k_"
      aria-describedby="menu-_r_1k_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with visible=false 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2_"
      aria-describedby="menu-_r_2_"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > should search on simple childs 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-menu"
      aria-describedby="menu-menu"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > should search on simple complex childs 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-menu"
      aria-describedby="menu-menu"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;
